--- a/index.html
+++ b/index.html
@@ -1,1 +1,106 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Asanara – Yoga & Harmonie</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&display=swap" rel="stylesheet" />
+  <style>
+    /* Style commun */
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #F5F3EA;
+      color: #2C2C2C;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    header {
+      background-color: #A8CABA;
+      color: white;
+      text-align: center;
+      padding: 40px 20px;
+    }
+    header h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 48px;
+      margin: 0;
+    }
+    header .subtitle {
+      font-size: 18px;
+      margin-top: 10px;
+    }
+    nav ul {
+      list-style: none;
+      display: flex;
+      justify-content: center;
+      gap: 25px;
+      margin: 20px 0 0 0;
+      padding: 0;
+    }
+    nav a {
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      transition: opacity 0.3s ease;
+    }
+    nav a:hover {
+      opacity: 0.7;
+    }
+    section {
+      padding: 60px 20px;
+      max-width: 800px;
+      margin: auto;
+      text-align: center;
+    }
+    h2 {
+      font-family: 'Playfair Display', serif;
+      color: #2C2C2C;
+      margin-bottom: 20px;
+    }
+    button {
+      background-color: #EFD9D1;
+      border: none;
+      border-radius: 4px;
+      padding: 12px 20px;
+      font-weight: bold;
+      color: #2C2C2C;
+      cursor: pointer;
+      font-size: 18px;
+      margin-top: 20px;
+      transition: background-color 0.3s ease;
+    }
+    button:hover {
+      background-color: #d6bdb5;
+    }
+    footer {
+      background-color: #A8CABA;
+      text-align: center;
+      color: white;
+      padding: 20px;
+      margin-top: 40px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Asanara</h1>
+    <p class="subtitle">Le yoga comme voie intérieure</p>
+    <nav>
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="postures.html">Postures</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section>
+    <h2>Bienvenue sur Asanara</h2>
+    <p>Découvrez le yoga en douceur et à votre rythme.</p>
+    <button onclick="location.href='postures.html'">Découvrir les postures</button>
+  </section>
+  <footer>
+    <p>&copy; 2025 Asanara. Pratiquez l’harmonie.</p>
+  </footer>
+</body>
+</html>
